# 09-streamlit-dashboard-realtime

./: README.md  pyproject.toml
exemplo/: main.py  main_exercicio.py  survey_data.csv
projeto_coleta/: coleta.py  coleta_postgres_sqlalchemy.py
projeto_dash/: dash_postgres.py
streamlit-kafka/: pyproject.toml  readme.md
streamlit-kafka/kafka-local/: docker-compose.yaml
streamlit-kafka/src/: consumer.py  dashboard.py  dashboard_live.py  producer.py
workshop_kubernets/: infos
workshop_kubernets/app/: replicaset.yaml
