[tool.poetry]
name = "09-streamlit-dashboard-realtime"
version = "0.1.0"
description = ""
authors = ["hmaiajunior <juniorce04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.44.1"
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
